{
  "version": 4,
  "terraform_version": "1.3.0",
  "serial": 188,
  "lineage": "9722a8a3-60ef-ce16-a782-d6fcefd33c3a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036147b41433f2596",
            "association_id": "eipassoc-007eb9b4603a0ba14",
            "domain": "vpc",
            "id": "eipalloc-036147b41433f2596",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0d6bb27de589496c2",
            "private_dns": "ip-10-0-1-180.ap-south-1.compute.internal",
            "private_ip": "10.0.1.180",
            "public_dns": "ec2-3-6-197-129.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.197.129",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_route_table.public_rt1",
            "aws_route_table_association.public_rtsa1",
            "aws_subnet.public_1a",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:054061749690:internet-gateway/igw-067d7baddc5cef034",
            "id": "igw-067d7baddc5cef034",
            "owner_id": "054061749690",
            "tags": {
              "Name": "test_igw"
            },
            "tags_all": {
              "Name": "test_igw"
            },
            "vpc_id": "vpc-084021d21f49dd9fa"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "test_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036147b41433f2596",
            "connectivity_type": "public",
            "id": "nat-01cdb98c228aea806",
            "network_interface_id": "eni-0d6bb27de589496c2",
            "private_ip": "10.0.1.180",
            "public_ip": "3.6.197.129",
            "subnet_id": "subnet-0fcebc34d8782c49c",
            "tags": {
              "Name": "test_ngw"
            },
            "tags_all": {
              "Name": "test_ngw"
            }
          },
          "dependencies": [
            "aws_eip.ngw_eip",
            "aws_internet_gateway.test_igw",
            "aws_route_table.public_rt1",
            "aws_route_table_association.public_rtsa1",
            "aws_subnet.public_1a",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:054061749690:route-table/rtb-0d8d808ede639389e",
            "id": "rtb-0d8d808ede639389e",
            "owner_id": "054061749690",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.3.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01cdb98c228aea806",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt1"
            },
            "tags_all": {
              "Name": "private_rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-084021d21f49dd9fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ngw_eip",
            "aws_internet_gateway.test_igw",
            "aws_nat_gateway.test_ngw",
            "aws_route_table.public_rt1",
            "aws_route_table_association.public_rtsa1",
            "aws_subnet.public_1a",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:054061749690:route-table/rtb-0e79af80826784459",
            "id": "rtb-0e79af80826784459",
            "owner_id": "054061749690",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.4.0/24",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01cdb98c228aea806",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt2"
            },
            "tags_all": {
              "Name": "private_rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-084021d21f49dd9fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ngw_eip",
            "aws_internet_gateway.test_igw",
            "aws_nat_gateway.test_ngw",
            "aws_route_table.public_rt1",
            "aws_route_table_association.public_rtsa1",
            "aws_subnet.public_1a",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:054061749690:route-table/rtb-036e924728198066d",
            "id": "rtb-036e924728198066d",
            "owner_id": "054061749690",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-067d7baddc5cef034",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt1"
            },
            "tags_all": {
              "Name": "public_rt1"
            },
            "timeouts": null,
            "vpc_id": "vpc-084021d21f49dd9fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:054061749690:route-table/rtb-00112df46e7403f43",
            "id": "rtb-00112df46e7403f43",
            "owner_id": "054061749690",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-067d7baddc5cef034",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt2"
            },
            "tags_all": {
              "Name": "public_rt2"
            },
            "timeouts": null,
            "vpc_id": "vpc-084021d21f49dd9fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rtsa1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fa7b99d6f50cca5",
            "route_table_id": "rtb-0d8d808ede639389e",
            "subnet_id": "subnet-0ede26dd6fd47d177"
          },
          "dependencies": [
            "aws_eip.ngw_eip",
            "aws_internet_gateway.test_igw",
            "aws_nat_gateway.test_ngw",
            "aws_route_table.private_rt1",
            "aws_route_table.public_rt1",
            "aws_route_table_association.public_rtsa1",
            "aws_subnet.private_1a",
            "aws_subnet.public_1a",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rtsa2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a500ddc74aa0f008",
            "route_table_id": "rtb-0e79af80826784459",
            "subnet_id": "subnet-0356b7c7fe058280d"
          },
          "dependencies": [
            "aws_eip.ngw_eip",
            "aws_internet_gateway.test_igw",
            "aws_nat_gateway.test_ngw",
            "aws_route_table.private_rt2",
            "aws_route_table.public_rt1",
            "aws_route_table_association.public_rtsa1",
            "aws_subnet.private_1b",
            "aws_subnet.public_1a",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rtsa1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eed102cd6eb1a68e",
            "route_table_id": "rtb-036e924728198066d",
            "subnet_id": "subnet-0fcebc34d8782c49c"
          },
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_route_table.public_rt1",
            "aws_subnet.public_1a",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rtsa2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07a38c2f8e48bd998",
            "route_table_id": "rtb-00112df46e7403f43",
            "subnet_id": "subnet-0e898f4ae11aadc3c"
          },
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_route_table.public_rt2",
            "aws_subnet.public_1b",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:054061749690:security-group/sg-0aa307601933dce8a",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa307601933dce8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "https from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "https from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "054061749690",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all"
            },
            "tags_all": {
              "Name": "allow_all"
            },
            "timeouts": null,
            "vpc_id": "vpc-084021d21f49dd9fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:054061749690:subnet/subnet-0ede26dd6fd47d177",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ede26dd6fd47d177",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054061749690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_1a"
            },
            "tags_all": {
              "Name": "private_1a"
            },
            "vpc_id": "vpc-084021d21f49dd9fa"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:054061749690:subnet/subnet-0356b7c7fe058280d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0356b7c7fe058280d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054061749690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_1b"
            },
            "tags_all": {
              "Name": "private_1b"
            },
            "vpc_id": "vpc-084021d21f49dd9fa"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:054061749690:subnet/subnet-0fcebc34d8782c49c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcebc34d8782c49c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "054061749690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_1a"
            },
            "tags_all": {
              "Name": "public_1a"
            },
            "vpc_id": "vpc-084021d21f49dd9fa"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:054061749690:subnet/subnet-0e898f4ae11aadc3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e898f4ae11aadc3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "054061749690",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_1b"
            },
            "tags_all": {
              "Name": "public_1b"
            },
            "vpc_id": "vpc-084021d21f49dd9fa"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:054061749690:vpc/vpc-084021d21f49dd9fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01d8c4788fbcc3c30",
            "default_route_table_id": "rtb-0d73cb91651ff1940",
            "default_security_group_id": "sg-0466fd3341e4376d9",
            "dhcp_options_id": "dopt-0759c522eedb546b2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-084021d21f49dd9fa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d73cb91651ff1940",
            "owner_id": "054061749690",
            "tags": {
              "Name": "test"
            },
            "tags_all": {
              "Name": "test"
            }
          }
        }
      ]
    }
  ]
}